--- a/top.html
+++ b/top.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html lang="ja">
 <head>
- <meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
+ <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
  <meta http-equiv="Content-style-Type" content="text/css">
  <link rel="stylesheet" type="text/css" href="style.css">
 <title>***</title>
@@ -9,79 +9,61 @@
 <body style="background-color:transparent;">
 <h2>Information</h2>
 <div class="text1">
-ƒCƒ“ƒ‰ƒCƒ“ƒtƒŒ[ƒ€‚Ìƒeƒ“ƒvƒŒ[ƒg‚Å‚·B<br>
-ŠO•”CSSŽg—pBƒŠƒ“ƒNFE•¶Žš‘S”ÊEƒXƒNƒ[ƒ‹ƒo[‚È‚Ç‚ÌƒfƒUƒCƒ“‘S”Ê‚ÌÝ’è‚Í‚»‚¿‚ç‚ðŽQl‚É‚µ‚Ä‚­‚¾‚³‚¢B<br>
+å¤–éƒ¨CSSä½¿ç”¨ã€‚ãƒªãƒ³ã‚¯è‰²ãƒ»æ–‡å­—å…¨èˆ¬ãƒ»ã‚¹ã‚¯ãƒ­ãƒ¼ãƒ«ãƒãƒ¼ãªã©ã®ãƒ‡ã‚¶ã‚¤ãƒ³å…¨èˆ¬ã®è¨­å®šã¯ãã¡ã‚‰ã‚’å‚è€ƒã«ã—ã¦ãã ã•ã„ã€‚<br>
 <br>
-“§‰ßƒtƒŒ[ƒ€‚ðŽg—pB‚»‚ê‚¼‚ê‚Ìƒy[ƒW“à‚Ì<em>&lt;body@style="background-color:transparent;"&gt;</em>‚Æ‚¢‚¤•”•ª‚Ííœ‚µ‚È‚¢‚Å‚­‚¾‚³‚¢B<br>
+é€éŽãƒ•ãƒ¬ãƒ¼ãƒ ã‚’ä½¿ç”¨ã€‚ãã‚Œãžã‚Œã®ãƒšãƒ¼ã‚¸å†…ã®<em>&lt;bodyã€€style="background-color:transparent;"&gt;</em>ã¨ã„ã†éƒ¨åˆ†ã¯å‰Šé™¤ã—ãªã„ã§ãã ã•ã„ã€‚<br>
 <br>
-ƒƒjƒ…[•”•ª‚ÌƒŠƒ“ƒN‚Í‘S‚ÄƒtƒŒ[ƒ€“à‚É•\Ž¦‚³‚ê‚é‚æ‚¤ˆêŠ‡Žw’è‚µ‚Ä‚¢‚Ü‚·B<br>
+ãƒ¡ãƒ‹ãƒ¥ãƒ¼éƒ¨åˆ†ã®ãƒªãƒ³ã‚¯ã¯å…¨ã¦ãƒ•ãƒ¬ãƒ¼ãƒ å†…ã«è¡¨ç¤ºã•ã‚Œã‚‹ã‚ˆã†ä¸€æ‹¬æŒ‡å®šã—ã¦ã„ã¾ã™ã€‚<br>
 </div>
 <h2>Image</h2>
 <div class="text1">
-‰æ‘œ‚Í <a href="http://skyruins.com/" target="_blank">Sky Ruins</a> —l‚©‚ç‚¨ŽØ‚è‚µ‚Ü‚µ‚½B<br>
-‰æ‘œ‚ð‚»‚Ì‚Ü‚ÜŽg—p‚³‚ê‚éê‡‚ÍA‘fÞŒ³ƒTƒCƒg—l‚Ì‹K–ñ‚ðn“Ç‚Ìã‚Å‚²Žg—p‚­‚¾‚³‚¢B<br><br>
-‰æ‘œ‚ð“ü‚ê‘Ö‚¦‚é‚Æ‚«‚ÍwPhoto by Sky Ruins x‚ðíœor•ÏX‚µ‚Ä‚­‚¾‚³‚¢B
+ç”»åƒã¯ <a href="http://skyruins.com/" target="_blank">Sky Ruins</a> æ§˜ã‹ã‚‰ãŠå€Ÿã‚Šã—ã¾ã—ãŸã€‚<br>
+ç”»åƒã‚’ãã®ã¾ã¾ä½¿ç”¨ã•ã‚Œã‚‹å ´åˆã¯ã€ç´ æå…ƒã‚µã‚¤ãƒˆæ§˜ã®è¦ç´„ã‚’ç†Ÿèª­ã®ä¸Šã§ã”ä½¿ç”¨ãã ã•ã„ã€‚<br><br>
+ç”»åƒã‚’å…¥ã‚Œæ›¿ãˆã‚‹ã¨ãã¯ã€ŽPhoto by Sky Ruins ã€ã‚’å‰Šé™¤orå¤‰æ›´ã—ã¦ãã ã•ã„ã€‚
 </div>
 <h2>Download File</h2>
 <div class="text1">
-ƒ_ƒEƒ“ƒ[ƒhƒtƒ@ƒCƒ‹‚Ì’†g‚ÍˆÈ‰º‚Ì’Ê‚è‚Å‚·B<br><br>
-&rArr; htmlEcssƒtƒ@ƒCƒ‹
-<ul>
-<li>style.css</li>
-<li>index.html</li>
-<li>index2.html</li>
-<li>top.html</li>
-<li>about.html</li>
-<li>mail.html</li>
-<li>link.html</li>
-</ul><br>
-&rArr; ‰æ‘œƒtƒ@ƒCƒ‹
-<ul>
-<li>bg01.jpg</li>
-<li>bg02.png</li>
-<li>h3.gif</li>
-<li>menu.gif</li>
-<li>banner1`3.gif</li>
-</ul>
+<br>
+&rArr; htmlãƒ»cssãƒ•ã‚¡ã‚¤ãƒ«
+
+&rArr; ç”»åƒãƒ•ã‚¡ã‚¤ãƒ«
+
 </div>
 <h2>Sample</h2>
 <div class="text1">
-<a href="top.html">ƒŠƒ“ƒN‚Ì•¶ŽšF</a><br>
-<em>&lt;em&gt;‹­’²&lt;/em&gt;</em><br>
-<strong>&lt;strong&gt;‚æ‚è‹­‚¢‹­’²&lt;/strong&gt;</strong><br>
-<ins>&lt;ins&gt;’Ç‰Á&lt;/ins&gt;</ins><br>
-<del>&lt;del&gt;íœ&lt;/del&gt;</del><br><br>
-‚ ‚¢‚¤‚¦‚¨‚©‚«‚­‚¯‚±‚³‚¢‚·‚¹‚»‚½‚¿‚Â‚Ä‚Æ‚È‚É‚Ê‚Ë‚Ì‚Í‚Ð‚Ó‚Ö‚Ù‚Ü‚Ý‚Þ‚ß‚à‚â‚ä‚æ‚í‚ð‚ñ<br>
-ƒAƒCƒEƒGƒIƒJƒLƒNƒPƒRƒTƒVƒXƒZƒ\ƒ^ƒ`ƒcƒeƒgƒiƒjƒkƒlƒmƒnƒqƒtƒwƒzƒ}ƒ~ƒ€ƒƒ‚ƒ„ƒ†ƒ’ƒƒ’ƒ“<br>
-ABCDEFGHIJKLMNOPQRSTYVWXYT@abcdefghijklmnopqrstuvwxyt<br>
+<a href="top.html">ãƒªãƒ³ã‚¯ã®æ–‡å­—è‰²</a><br>
+<em>&lt;em&gt;å¼·èª¿&lt;/em&gt;</em><br>
+<strong>&lt;strong&gt;ã‚ˆã‚Šå¼·ã„å¼·èª¿&lt;/strong&gt;</strong><br>
+<ins>&lt;ins&gt;è¿½åŠ &lt;/ins&gt;</ins><br>
+<del>&lt;del&gt;å‰Šé™¤&lt;/del&gt;</del><br><br>
+ã‚ã„ã†ãˆãŠã‹ããã‘ã“ã•ã„ã™ã›ããŸã¡ã¤ã¦ã¨ãªã«ã¬ã­ã®ã¯ã²ãµã¸ã»ã¾ã¿ã‚€ã‚ã‚‚ã‚„ã‚†ã‚ˆã‚ã‚’ã‚“<br>
+ã‚¢ã‚¤ã‚¦ã‚¨ã‚ªã‚«ã‚­ã‚¯ã‚±ã‚³ã‚µã‚·ã‚¹ã‚»ã‚½ã‚¿ãƒãƒ„ãƒ†ãƒˆãƒŠãƒ‹ãƒŒãƒãƒŽãƒãƒ’ãƒ•ãƒ˜ãƒ›ãƒžãƒŸãƒ ãƒ¡ãƒ¢ãƒ¤ãƒ¦ãƒ²ãƒ¯ãƒ²ãƒ³<br>
+ABCDEFGHIJKLMNOPQRSTYVWXYTã€€abcdefghijklmnopqrstuvwxyt<br>
 0123456789 
 </div>
 <h2>Other</h2>
 <div class="text1">
 
-<!-- ‚±‚±‚©‚çXV—š—ð—pƒeƒLƒXƒgƒGƒŠƒA -->
+<!-- ã“ã“ã‹ã‚‰æ›´æ–°å±¥æ­´ç”¨ãƒ†ã‚­ã‚¹ãƒˆã‚¨ãƒªã‚¢ -->
 <textarea cols="55" rows="6" readonly="readonly">
-XV—š—ð—p‚É‚Å‚à‚Ç‚¤‚¼B
+æ›´æ–°å±¥æ­´ç”¨ã«ã§ã‚‚ã©ã†ãžã€‚
 
-08/12/03 ƒeƒ“ƒvƒŒ[ƒgŒöŠJ
 
 
 </textarea>
-<!-- ‚±‚±‚Ü‚Å -->
+<!-- ã“ã“ã¾ã§ -->
 
-<!-- ‚±‚±‚©‚ç‘•übox1 -->
+<!-- ã“ã“ã‹ã‚‰è£…é£¾box1 -->
 <div class="box1">
-‘•ü—pbox‚»‚Ì‚PB<br>
-‚¨’m‚ç‚¹‚Æ‚©A‹­’²‚Æ‚©‚ÉŽg‚¦‚é‚©‚ÈH
+è£…é£¾ç”¨boxãã®ï¼‘ã€‚<br>
 </div>
-<!-- ‚±‚±‚Ü‚Å -->
+<!-- ã“ã“ã¾ã§ -->
 
-<!-- ‚±‚±‚©‚ç‘•übox2 -->
+<!-- ã“ã“ã‹ã‚‰è£…é£¾box2 -->
 <div class="box2">
-‘•ü—pbox‚»‚Ì‚QB<br>
-‚Ç‚¿‚ç‚àwstyle.cssx“à‚É‚Ä‘å‚«‚³EF‚ðŽw’è‚µ‚Ä‚¢‚Ü‚·B
+è£…é£¾ç”¨boxãã®ï¼’ã€‚<br>
 </div>
-<!-- ‚±‚±‚Ü‚Å -->
+<!-- ã“ã“ã¾ã§ -->
 
 </div>
 </body>
