--- a/index.html
+++ b/index.html
@@ -1,46 +1,140 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+  "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="ja">
 <head>
- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
- <meta http-equiv="content-style-type" content="text/css">
- <link rel="stylesheet" type="text/css" href="style.css">
-<title>***</title>
-<base target="main"><!-- ãƒªãƒ³ã‚¯ã‚’å…¨ã¦ãƒ¡ã‚¤ãƒ³ãƒšãƒ¼ã‚¸å†…ã«è¡¨ç¤ºã™ã‚‹ã‚ˆã†ã«æŒ‡å®š -->
+<meta http-equiv="content-type" content="text/html; charset=Shift_JIS">
+<meta http-equiv="content-style-type" content="text/css">
+<!--<meta name="viewport" content="width=device-width">-->
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>ƒTƒCƒg‚Ì–¼‘O</title>
+<link rel="stylesheet" type="text/css" href="csstemplate/style.css">
 </head>
-<body id="main_page">
-<table border="0" width="100%" height="100%" cellspacing="0" cellpadding="0" class="ta">
-<tr><td height="70" colspan="2" class="ta1">
-<h1>Your Site Name</h1>
-<div id="copyright">
-Photo by <a href="http://skyruins.com/" target="_blank">Sky Ruins</a>ã€€
-Designed by <a href="http://pepe.x0.com/pepe/" target="_blank">Pepe</a>
+<body id="INDEX">
+<div id="PAGETOP">
+
+
+<!--================-->
+<!--@@ƒwƒbƒ_[@@-->
+<!--================-->
+<div id="HEADER">
+<h1>Your site title</h1>
+<ul id="PAN">
+  <li>index</li>
+</ul>
 </div>
-</td></tr><tr><td valign="top" width="270" class="ta2">
-<div id="menu"><ul>
-<li><a href="top.html">Top</a></li>
-<li><a href="link.html">Link</a></li>
-<li><a href="index.html" target="_top">Index</a></li>
-</ul></div>
-<div id="scroll">
-<h4>Welcome!!</h4>
-<div class="text2">
-å½“ã‚µã‚¤ãƒˆã¸ã‚ˆã†ã“ãï¼<br>
-åˆã‚ã¦ã®æ–¹ã¯Aboutã‚’ã”è¦§ãã ã•ã„ã€‚<br>
-<br>
-ãªã©ãªã©èª¬æ˜Žæ›¸ã„ãŸã‚Šã™ã‚‹ã‚¹ãƒšãƒ¼ã‚¹ã€‚<br>
-ã‚ã¨ã¯æ›´æ–°å±¥æ­´ã¨ã‹ã€‚<br>
-<br>
-ãŸãã•ã‚“æ›¸ã‘ã°å‹æ‰‹ã«ã‚¹ã‚¯ãƒ­ãƒ¼ãƒ«ãƒãƒ¼è¡¨ç¤ºã•ã‚Œã¾ã™ã‚ˆã€‚<br>
-</div></div>
-<div id="scroll">
-<h4>Other</h4>
-<div class="text2">
-ã‚‚ã†ä¸€å€‹ã‚¹ã‚¯ãƒ­ãƒ¼ãƒ«ãƒœãƒƒã‚¯ã‚¹è¡¨ç¤ºã§ãã¾ã™ã€‚<br>
-ã‘ã©ã‚‚ã€é‚ªé­”ãªã‚‰æ¶ˆã—ã¦ãã ã•ã„ã­ã€‚
-</div></div>
-</td><td>
-<iframe src="top.html" name="main" frameborder="0" width="100%" height="100%" scrolling="yes" allowtransparency="true"></iframe>
-</td></tr>
-</table>
+<hr>
+
+
+<!--================-->
+<!--@@ƒƒjƒ…[@@-->
+<!--================-->
+<div id="MENU">
+<h2>menu</h2>
+ <ul>
+   <li id="MENU01" class="menu-on"><a href="index.html">index</a></li>
+   <li id="MENU02"><a href="sample.html">sample</a></li>
+   <li id="MENU03"><a href="sample.html">sample</a></li>
+   <li id="MENU04"><a href="sample.html">sample</a></li>
+  </ul>
+</div>
+<hr>
+
+
+<!--================-->
+<!--@@‹LŽ–•”•ª@@-->
+<!--================-->
+<div id="KIZI">
+
+
+<h2>index.html‚É‚Â‚¢‚Ä</h2>
+<div class="text">
+
+  <p>‚±‚Ìindex.html‚ÍAƒTƒCƒg‚ÌindexiÅ‰‚Ìƒy[ƒWj‚É—p‚¢‚ç‚ê‚é‚±‚Æ‚ð‘O’ñ‚Éì‚ç‚ê‚½HTML‚Å‚·B</p>
+  <p>Œãq‚³‚ê‚éuŒÂlƒTƒCƒg‚ÅŒ©‚ç‚ê‚éindexƒy[ƒW‚Ì’ˆÓ•¶‚É‚Â‚¢‚Äv‚É‚à–Ú‚ð’Ê‚µ‚Ä‚­‚¾‚³‚¢B</p>
+
+<ul class="modori">
+  <li><a href="#PAGETOP">TOP</a></li>
+</ul>
+</div>
+<hr>
+
+
+<h2>‚±‚Ìƒeƒ“ƒvƒŒ[ƒg‚É‚Â‚¢‚Ä</h2>
+<div class="text">
+
+  <h3>ŠT—v</h3>
+  <p>‚±‚ÌŠî‘bhtml‚ÍAw<em>htmlƒtƒ@ƒCƒ‹‚É‚ÍˆêØŽè‚ð‰Á‚¦‚¸ACSSƒtƒ@ƒCƒ‹‚Æ‰æ‘œ‚ð•ÏX‚·‚é‚±‚Æ‚ÅƒfƒUƒCƒ“‚ðƒ`ƒFƒ“ƒW‚·‚é</em>x‚±‚Æ‚ð‰Â”\‚Æ‚·‚éƒeƒ“ƒvƒŒ[ƒg‚Å‚·B¡‚ÍƒfƒUƒCƒ“‚ÌŽw’è‚Í‚³‚ê‚Ä‚¢‚Ü‚¹‚ñ‚ªA‘¼‚ÌƒTƒCƒg‚©‚çCSSƒtƒ@ƒCƒ‹‚ðƒ_ƒEƒ“ƒ[ƒh‚·‚éŽ–‚Å•ÏX‚Å‚«‚Ü‚·Bƒ_ƒEƒ“ƒ[ƒh‚Å‚«‚éƒTƒCƒg‚Í<a href="http://css-designplate.info/">CSS’…‚¹‘Ö‚¦ƒeƒ“ƒvƒŒ[ƒgƒvƒƒWƒFƒNƒg</a>“à‚ÉƒŠƒ“ƒNW‚ª‚²‚´‚¢‚Ü‚·‚Ì‚ÅA‚»‚¿‚ç‚©‚ç‚¨D‚«‚ÈƒTƒCƒg‚ÉƒWƒƒƒ“ƒv‚µ‚Ä‚­‚¾‚³‚¢B</p>
+  <h3>ƒeƒ“ƒvƒŒ[ƒg‚ÌŽg‚¢•û</h3>
+  <p>Šé‰æƒTƒCƒg‚Ì‰ðàƒy[ƒW‚ðŠm”F‚µ‚Ä‚­‚¾‚³‚¢B</p>
+    <ul>
+     <li><a href="http://css-designplate.info/html/">Šî‘bhtml”z•z</a></li>
+     <li><a href="http://css-designplate.info/html/explain/">Šî‘bhtml‰ðà</a></li>
+     <li><a href="http://css-designplate.info/support/faq/#FAQ2">FAQ&gt;ƒ†[ƒU[Œü</a></li>
+    </ul>
+
+<ul class="modori">
+  <li><a href="#PAGETOP">TOP</a></li>
+</ul>
+</div>
+<hr>
+
+
+<h2>’ˆÓŽ–€</h2>
+<div class="text">
+
+  <h3>•¶–@‹Lq</h3>
+  <p>‚±‚Ìƒeƒ“ƒvƒŒ[ƒg‚ðŽg—p‚·‚ê‚ÎACSS‚ð•ÏX‚·‚éŽ–‚ÅŠy‚ÉƒfƒUƒCƒ“‚ª•ÏX‚·‚é‚±‚Æ‚ªo—ˆ‚Ü‚·‚ªA‚»‚ê‚Í‚ ‚È‚½‚ª<strong>‚Å‚«‚é‚¾‚¯³‚µ‚¢•¶–@‚ÅƒTƒCƒg‚ðì¬‚µ‚Ä‚¢‚­‚±‚Æ‚ð‘O’ñ</strong>‚Æ‚µ‚Ä‚¢‚Ü‚·B‚Â‚Ü‚è‚ ‚È‚½‚ÍwebƒTƒCƒg‚ðì¬‚µ‚Ä‚¢‚­“r’†‚ÅAŒë‚Á‚Ä•K—v‚Èƒ^ƒO‚ðíœ‚µ‚Ä‚µ‚Ü‚Á‚½‚èA‹Lqƒ~ƒX‚ð‚·‚é‚ÆƒfƒUƒCƒ“‚Í•ö‚ê‚Ä‚µ‚Ü‚¢‚Ü‚·B‚È‚Ì‚Å‚ ‚È‚½‚ªAhtmlƒ^ƒO‚âCSS‚ð‘S‚­‚ ‚Â‚©‚Á‚½Ž–‚ª‚È‚¢‰SŽÒ‚È‚ç‚ÎA‚±‚Ìƒeƒ“ƒvƒŒ[ƒg‚ðŽg—p‚·‚é‚±‚Æ‚Í”ð‚¯‚½•û‚ª‚¢‚¢‚©‚à‚µ‚ê‚Ü‚¹‚ñB³‚µ‚¢•¶–@‚É‚Â‚¢‚Ä‚Í<a href="http://www.google.co.jp/">google</a>‚È‚Ç‚ðŽg—p‚µA‚²Ž©•ª‚ÅŠwK‚µ‚Ä‚­‚¾‚³‚¢B<br>
+ˆêŒ©•s—v‚ÉŒ©‚¦‚éƒ^ƒO‚àAƒfƒUƒCƒ“‚ð•ÏX‚·‚éÛ‚É•K—v‚É‚È‚éê‡‚ª‚ ‚è‚Ü‚·Bƒ^ƒO‚Ì•ÏXEíœ‚ÍTd‚És‚Á‚Ä‚­‚¾‚³‚¢B</p>
+  <p>‚à‚µ•s‹ï‡‚ª”­¶‚µ‚½ê‡‚ÍA<a href="http://openlab.ring.gr.jp/k16/htmllint/htmllint.html">Another HTML-lint</a>‚Åhtml‚É‹Lqƒ~ƒX‚ª‚È‚¢‚©Šm”F‚µ‚Ä‚­‚¾‚³‚¢BCSSƒtƒ@ƒCƒ‹‚ÉŽè‚ð‰Á‚¦‚½ê‡‚Í<a href="http://jigsaw.w3.org/css-validator/">W3C CSSŒŸØƒT[ƒrƒX</a>‚Åƒ`ƒFƒbƒN‚·‚éŽ–‚ðƒIƒXƒXƒ‚µ‚Ü‚·B<br>
+‚»‚ê‚Å‚à‚È‚¨‚ç‚È‚¢‚Æ‚«‚ÍCSS§ìŽÒ‚ÉŽ¿–âƒ[ƒ‹‚ð‘—‚é‚©A‚à‚µ‚­‚Í<a href="http://css-designplate.info/">CSS’…‚¹‘Ö‚¦ƒeƒ“ƒvƒŒ[ƒgƒvƒƒWƒFƒNƒg</a>“à‚É‚ ‚éƒtƒH[ƒ‰ƒ€‚ð‚²—˜—p‚­‚¾‚³‚¢B</p>
+  <h3>ŒÂlƒTƒCƒg‚ÅŒ©‚ç‚ê‚éindexƒy[ƒW‚Ì’ˆÓ•¶‚É‚Â‚¢‚Ä</h3>
+  <p>index.htmliŠg’£Žq‚ÍˆÙ‚È‚éê‡‚ª‚ ‚éj‚ÉƒTƒCƒg‚Ì’ˆÓ•¶‚È‚Ç‚ðŒfÚ‚µ‚½‚èA‚Ü‚½‚ÍƒfƒUƒCƒ“‚ðdŽ‹‚µü‚è•t‚¯AƒTƒCƒg‚ÌwŒºŠÖx‚Ì–ðŠ„‚ð—^‚¦‚Ä‚¢‚éŒÂl‚ÌwebƒTƒCƒg‚ð‘½‚­Œ©‚©‚¯‚Ü‚·B‚µ‚©‚µ–{—ˆAindex.html‚É‚ÍAindex‚Æ‚¢‚¤’PŒê‚ÌˆÓ–¡‚©‚ç•ª‚©‚é‚æ‚¤‚ÉAƒTƒCƒg‚Ì–ÚŽŸ‚Æ‚µ‚ÄAƒƒjƒ…[‚âŠT—v‚ðŽ¦‚·‚à‚Ì‚Å‚·B‚»‚Ì‚½‚ß‚±‚ÌCDP‚ÍƒGƒ“ƒ^[ƒy[ƒW‚Æ‚µ‚Ä‚Ì–ðŠ„‚É“Á‰»‚µ‚½index.html‚ð—pˆÓ‚µ‚Ä‚¢‚Ü‚¹‚ñB‚½‚¾‚µAINDEX‚Ì‚ÝCSS‚ÅƒfƒUƒCƒ“‚ð•Ï‚¦‚é‚±‚Æ‚Í‰Â”\‚Å‚·B‰ïˆõ§‚ÌƒTƒCƒg‚È‚ÇA‚Ç‚¤‚µ‚Ä‚à“Æ—§‚µ‚½ƒGƒ“ƒ^[ƒy[ƒW‚ª•K—v‚Èê‡‚ÍA‚¨Žè”‚Å‚·‚ª•Ê“r‚Å‚²—pˆÓ‚­‚¾‚³‚¢B</p>
+  <h3>ƒtƒbƒ^[‚ÌƒAƒhƒŒƒX</h3>
+  <p>ƒtƒbƒ^[‚É‚ ‚È‚½‚Ìƒ[ƒ‹ƒAƒhƒŒƒX‚ð‹LÚ‚·‚éêŠ‚ª‚ ‚è‚Ü‚·B‚µ‚©‚µŽ©•ª‚Ìƒ[ƒ‹ƒAƒhƒŒƒX‚ð‹Lq‚·‚é‚±‚Æ‚É•sˆÀ‚ðŠo‚¦‚é•û‚Í­‚È‚­‚È‚¢‚Å‚µ‚å‚¤B‚»‚Ìê‡‚Íƒ[ƒ‹ƒtƒH[ƒ€‚ª‚ ‚éƒy[ƒWA‚à‚µ‚­‚Íƒ[ƒ‹ƒAƒhƒŒƒX‚ª‹Lq‚µ‚Ä‚ ‚éƒvƒƒtƒB[ƒ‹ƒy[ƒW“™‚ÖƒŠƒ“ƒN‚ð‘‚«‚©‚¦‚Ä‚­‚¾‚³‚¢B</p>
+  <h3>Œ¾ŒêŽw’è</h3>
+  <p>‚Ü‚½‚±‚ÌŠî‘bhtml‚Í“ú–{Œê‚ÌƒTƒCƒg—p‚Éì¬‚³‚ê‚Ä‚¢‚Ü‚·B“ú–{ŒêˆÈŠO‚ÌŒ¾ŒêŒ—‚ÅŽg—p‚³‚ê‚éê‡‚ÍA‚²Ž©•ª‚ÅŒ¾ŒêÝ’è‚ð•ÏX‚µ‚Ä‚­‚¾‚³‚¢B</p>
+
+<ul class="modori">
+  <li><a href="#PAGETOP">TOP</a></li>
+</ul>
+</div>
+<hr>
+
+
+<h2>—š—ð</h2>
+<div class="text">
+
+  <dl>
+    <dt>2006”N05ŒŽ01“ú</dt>
+        <dd>Šî‘bhtml”z•zŠJŽn</dd>
+  </dl>
+
+<ul class="modori">
+  <li><a href="#PAGETOP">TOP</a></li>
+</ul>
+</div>
+<hr>
+
+
+<!--KIZIƒuƒƒbƒN‚ð•Â‚¶‚Ü‚·«-->
+</div>
+
+
+<!--================-->
+<!--@@ƒtƒbƒ^[@@-->
+<!--================-->
+<div id="FOOTER">
+<h2>˜A—æ</h2>
+ <ul>
+   <li id="FOOTER01"><a href="#PAGETOP">TOP</a></li>
+   <li id="FOOTER02"><address><a href="mailto:mail@address.com">mail</a></address></li>
+   <li id="FOOTER03"><address><a href="http://css-designplate.info/">CSS Designplate</a></address></li>
+ </ul>
+</div>
+
+
+<!--PAGETOPƒuƒƒbƒN‚ð•Â‚¶‚Ü‚·«-->
+</div>
+
 </body>
 </html>
