リンク貼り付けた

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html >
 <html lang="ja">
 <head>
-<meta http-equiv="content-type" content="text/html; charset=Shift_JIS">
+<meta charset="UTF-8">
+<!--<meta http-equiv="content-type" content="text/html; charset=UTF-8">-->
 <meta http-equiv="content-style-type" content="text/css">
 <!--<meta name="viewport" content="width=device-width">-->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>サイトの名前</title>
+<title>shimaさいと</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body id="INDEX">
@@ -32,8 +33,8 @@
  <ul>
    <li id="MENU01" class="menu-on"><a href="index.html">index</a></li>
    <li id="MENU02"><a href="sample.html">sample</a></li>
-   <li id="MENU03"><a href="sample.html">sample</a></li>
-   <li id="MENU04"><a href="sample.html">sample</a></li>
+   <li id="MENU03"><a href="sample2.html">sample</a></li>
+   <li id="MENU04"><a href="sample3.html">sample</a></li>
   </ul>
 </div>
 <hr>
@@ -82,16 +83,7 @@
 <div class="text">
 
   <h3>文法記述</h3>
-  <p>このテンプレートを使用すれば、CSSを変更する事で楽にデザインが変更することが出来ますが、それはあなたが<strong>できるだけ正しい文法でサイトを作成していくことを前提</strong>としています。つまりあなたはwebサイトを作成していく途中で、誤って必要なタグを削除してしまったり、記述ミスをするとデザインは崩れてしまいます。なのであなたが、htmlタグやCSSを全くあつかった事がない初心者ならば、このテンプレートを使用することは避けた方がいいかもしれません。正しい文法については<a href="http://www.google.co.jp/">google</a>などを使用し、ご自分で学習してください。<br>
-一見不要に見えるタグも、デザインを変更する際に必要になる場合があります。タグの変更・削除は慎重に行ってください。</p>
-  <p>もし不具合が発生した場合は、<a href="http://openlab.ring.gr.jp/k16/htmllint/htmllint.html">Another HTML-lint</a>でhtmlに記述ミスがないか確認してください。CSSファイルに手を加えた場合は<a href="http://jigsaw.w3.org/css-validator/">W3C CSS検証サービス</a>でチェックする事をオススメします。<br>
-それでもなおらないときはCSS制作者に質問メールを送るか、もしくは<a href="http://css-designplate.info/">CSS着せ替えテンプレートプロジェクト</a>内にあるフォーラムをご利用ください。</p>
-  <h3>個人サイトで見られるindexページの注意文について</h3>
-  <p>index.html（拡張子は異なる場合がある）にサイトの注意文などを掲載したり、またはデザインを重視し飾り付け、サイトの『玄関』の役割を与えている個人のwebサイトを多く見かけます。しかし本来、index.htmlには、indexという単語の意味から分かるように、サイトの目次として、メニューや概要を示すものです。そのためこのCDPはエンターページとしての役割に特化したindex.htmlを用意していません。ただし、INDEXのみCSSでデザインを変えることは可能です。会員制のサイトなど、どうしても独立したエンターページが必要な場合は、お手数ですが別途でご用意ください。</p>
-  <h3>フッターのアドレス</h3>
-  <p>フッターにあなたのメールアドレスを記載する場所があります。しかし自分のメールアドレスを記述することに不安を覚える方は少なくないでしょう。その場合はメールフォームがあるページ、もしくはメールアドレスが記述してあるプロフィールページ等へリンクを書きかえてください。</p>
-  <h3>言語指定</h3>
-  <p>またこの基礎htmlは日本語のサイト用に作成されています。日本語以外の言語圏で使用される場合は、ご自分で言語設定を変更してください。</p>
+
 
 <ul class="modori">
   <li><a href="#PAGETOP">TOP</a></li>
@@ -104,8 +96,8 @@
 <div class="text">
 
   <dl>
-    <dt>2006年05月01日</dt>
-        <dd>基礎html配布開始</dd>
+    <dt>2016年05月01日</dt>
+        <dd>開始</dd>
   </dl>
 
 <ul class="modori">
