--- a/sample.html
+++ b/sample.html
@@ -1,22 +1,22 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-  "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html >
 <html lang="ja">
 <head>
-<meta http-equiv="content-type" content="text/html; charset=Shift_JIS">
+<meta charset="UTF-8">
+<!--<meta http-equiv="content-type" content="text/html; charset=UTF-8">-->
 <meta http-equiv="content-style-type" content="text/css">
 <!--<meta name="viewport" content="width=device-width">-->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>ƒTƒ“ƒvƒ‹ƒy[ƒW &lt; ƒTƒCƒg‚Ì–¼‘O </title>
-<link rel="stylesheet" type="text/css" href="csstemplate/style.css">
+<title>LINK</title>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <div id="PAGETOP">
 
 <!--================-->
-<!--@@ƒwƒbƒ_[@@-->
+<!--ã€€ã€€ãƒ˜ãƒƒãƒ€ãƒ¼ã€€ã€€-->
 <!--================-->
 <div id="HEADER">
-<h1>Your site title</h1>
+<h1>ãŠä¸–è©±ã«ãªã£ã¦ãŠã‚Šã¾ã™ã‚µã‚¤ãƒˆæ§˜</h1>
  <ul id="PAN">
    <li><a href="index.html">index</a></li>
    <li>sample</li>
@@ -26,129 +26,38 @@
 
 
 <!--================-->
-<!--@@ƒƒjƒ…[@@-->
+<!--ã€€ã€€ãƒ¡ãƒ‹ãƒ¥ãƒ¼ã€€ã€€-->
 <!--================-->
 <div id="MENU">
 <h2>menu</h2>
  <ul>
    <li id="MENU01"><a href="index.html" >index</a></li>
    <li id="MENU02" class="menu-on"><a href="sample.html">sample</a></li>
-   <li id="MENU03"><a href="sample.html">sample</a></li>
-   <li id="MENU04"><a href="sample.html">sample</a></li>
+   <li id="MENU03"><a href="sample2.html">sample</a></li>
+   <li id="MENU04"><a href="sample3.html">sample</a></li>
  </ul>
 </div>
 <hr>
 
 
 <!--================-->
-<!--@@‹LŽ–•”•ª@@-->
+<!--ã€€ã€€è¨˜äº‹éƒ¨åˆ†ã€€ã€€-->
 <!--================-->
 <div id="KIZI">
 
 
-<h2>sample.html‚É‚Â‚¢‚Ä</h2>
+<h2>ä»®æƒ³ç’°å¢ƒè¨­ç½®æ–¹æ³•</h2>
 <div class="text">
 
-  <p>‚±‚Ìsample.html‚ÍAƒTƒCƒg‚ÌŠeƒy[ƒW‚É—p‚¢‚ç‚ê‚é‚±‚Æ‚ð‘O’ñ‚Éì‚ç‚ê‚½HTML‚Å‚·Bƒy[ƒW‚ð‘‚â‚·ê‡‚Ísample.html‚ðƒRƒs[‚µ‚Ä—˜—p‚µ‚Ä‚­‚¾‚³‚¢B</p>
-
-<ul class="modori">
-  <li><a href="#PAGETOP">TOP</a></li>
-</ul>
-</div>
-<hr>
-
-
-<h2>‹LŽ–‚Ì‘åŒ©o‚µih2—v‘fj</h2>
-<div class="text">
-
-  <h3>‹LŽ–‚Ì’†Œ©o‚µih3—v‘fj</h3>
-  <h4>‹LŽ–‚Ì¬Œ©o‚µih4—v‘fj</h4>
-  <h5>¬Œ©o‚µ‚æ‚èd—v“x‚Ì’á‚¢Œ©o‚µih5—v‘fj</h5>
-  <h6>Å‚àd—v“x‚Ì’á‚¢Œ©o‚µih6—v‘fj</h6>
-
-<ul class="modori">
-  <li><a href="#PAGETOP">TOP</a></li>
-</ul>
-</div>
-<hr>
-
-
-<h2>’i—ŽE‹­’²E’Ç‰ÁEíœƒTƒ“ƒvƒ‹</h2>
-<div class="text">
- <p>’i—Ži•¶Í‚Ì“à—e“I‚È‚Ü‚Æ‚Ü‚è‚Ì’†‚Åˆê”Ô¬‚³‚¢‚à‚Ìj</p>
-
-  <p>
-    <em>‹­’²‚·‚é“à—e</em>E
-    <strong>‚æ‚è‹­‚¢‹­’²‚·‚é“à—e</strong>E
-    <ins>’Ç‰Á‚µ‚½“à—e</ins>E
-    <del>íœ‚µ‚½“à—e</del>
-  </p>
-
-<ul class="modori">
-  <li><a href="#PAGETOP">TOP</a></li>
-</ul>
-</div>
-<hr>
-
-
-<h2>ƒtƒH[ƒ€ƒTƒ“ƒvƒ‹</h2>
-<div class="text">
-
-  <form action="ŒÂ•ÊÝ’è" method="post">
-  <p>
-    <input type="text" name="text" id="TEXT" size="20" value="ƒeƒLƒXƒg"><br>
-    <textarea name="textarea" id="TEXTAREA" rows="5" cols="20">ƒeƒLƒXƒgƒGƒŠƒA</textarea>
-  </p>
-  <p>
-    <select name="select" id="SELECT" size="1">
-     <option value="option1">‘I‘ðŽˆ1</option>
-     <option value="option2">‘I‘ðŽˆ2</option>
-     <option value="option3">‘I‘ðŽˆ3</option>
-    </select>
-  </p>
-  <p>
-    <label for="CHECKBOX">ƒ`ƒFƒbƒNƒ{ƒbƒNƒX</label><input type="checkbox" name="checkbox" id="CHECKBOX" value=""> 
-    <label for="RADIO">ƒ‰ƒWƒIƒ{ƒ^ƒ“</label><input type="radio" name="radio" id="RADIO" value="">
-  </p>
-  <p>
-    <input type="button" name="button" id="BUTTON" value="ƒvƒbƒVƒ…ƒ{ƒ^ƒ“">
-  </p>
-  </form>
-
-<ul class="modori">
-  <li><a href="#PAGETOP">TOP</a></li>
-</ul>
-</div>
-<hr>
-
-
-<h2>ƒŠƒXƒgƒTƒ“ƒvƒ‹</h2>
-<div class="text">
-
-  <h3>˜—ñƒŠƒXƒg</h3>
+  <p>Macã§ã‚‚IEã‚’ã€ä»®æƒ³ç’°å¢ƒã‚’ç”¨ã„ã‚‹ã“ã¨ã§åˆ©ç”¨å¯èƒ½ã§ã™ã€‚<br>
+  ã“ã‚Œã§ã€ã‚µã‚¤ãƒˆã®ãƒ¬ã‚¤ã‚¢ã‚¦ãƒˆç¢ºèªã‚‚ã°ã£ã¡ã‚Šã§ã™ã­ã€‚</p>
+  <p>ä»¥ä¸‹ã«ã€ãŠã™ã™ã‚æŒ‡å—ã‚µã‚¤ãƒˆã‚’è¼‰ã›ã¦ãŠãã¾ã™ï¼ˆæŠ•ã’ã‚„ã‚Šï¼‰</p>
   <ol>
-    <li>‡”Ô«‚Ì‚ ‚éƒŠƒXƒg‚Å‚·</li>
-    <li>˜—ñƒŠƒXƒg</li>
-    <li>˜—ñƒŠƒXƒg</li>
-  </ol>
-
-  <h3>‡•s“¯ƒŠƒXƒg</h3>
-  <ul>
-    <li>‡”Ô«‚Ì‚È‚¢ƒŠƒXƒg‚Å‚·</li>
-    <li>‡•s“¯ƒŠƒXƒg</li>
-    <li>‡•s“¯ƒŠƒXƒg</li>
-  </ul>
-
-  <h3>’è‹`ƒŠƒXƒg</h3>
-  <dl>
-    <dt>’è‹`ƒŠƒXƒg‚Æ‚Í</dt>
-        <dd>—pŒê‚ð’è‹`‚µA‚»‚Ì‰ðà‚ð‚·‚éƒŠƒXƒg‚Å‚·B</dd>
-    <dt>’è‹`‚·‚é—pŒê1</dt>
-        <dd>—pŒê1‚Ìà–¾Bà–¾à–¾à–¾B</dd>
-    <dt>’è‹`‚·‚é—pŒê2</dt>
-        <dd>—pŒê2‚Ìà–¾Bà–¾à–¾à–¾B</dd>
-  </dl>
-
+  <li><a href="http://webmem.hatenablog.com/entry/how-to-check-Microsoft-Edge-and-versions-of-IE6-throuth-IE11-using-VirtualBox-and-Windows-Virtual-Machines-on-Mac">ä»®æƒ³ç’°å¢ƒãƒ»ãƒ€ã‚¦ãƒ³ãƒ­ãƒ¼ãƒ‰ã®æ¦‚è¦</a></li>
+  <li><a href="https://developer.microsoft.com/en-us/microsoft-edge/tools/vms/">Virtualmachine(IEãŒä½¿ãˆã‚‹ä»®æƒ³ç’°å¢ƒã®ãƒ€ã‚¦ãƒ³ãƒ­ãƒ¼ãƒ‰)</a></li>
+  <li><a href="https://www.ubuntulinux.jp/">ã›ã£ã‹ããªã®ã§ã“ã¡ã‚‰ã‚‚(ä»®æƒ³ç’°å¢ƒ)</a></li>
+	</ol>
+  
 <ul class="modori">
   <li><a href="#PAGETOP">TOP</a></li>
 </ul>
@@ -156,28 +65,31 @@
 <hr>
 
 
-<h2>ƒAƒhƒŒƒXƒTƒ“ƒvƒ‹</h2>
+<h3>ã“ã®ã‚µã‚¤ãƒˆã®CSS</h3>
 <div class="text">
+<p>ä»¥ä¸‹ã®ã‚µã‚¤ãƒˆæ§˜ã‚ˆã‚Šã€ãŠå€Ÿã‚Šã—ã¾ã—ãŸã€‚</p>
+<a href="http://a-c.2-d.jp/">alevirita</a>
 
-  <address>ƒ[ƒ‹ƒAƒhƒŒƒX‚È‚ÇA–¼‚Å‚·B</address>
+
 
 <ul class="modori">
   <li><a href="#PAGETOP">TOP</a></li>
 </ul>
 </div>
+
 <hr>
 
 
 
-<!--KIZIƒuƒƒbƒN‚ð•Â‚¶‚Ü‚·«-->
+<!--KIZIãƒ–ãƒ­ãƒƒã‚¯ã‚’é–‰ã˜ã¾ã™â†“-->
 </div>
 
 
 <!--================-->
-<!--@@ƒtƒbƒ^[@@-->
+<!--ã€€ã€€ãƒ•ãƒƒã‚¿ãƒ¼ã€€ã€€-->
 <!--================-->
 <div id="FOOTER">
-<h2>˜A—æ</h2>
+<h2>é€£çµ¡å…ˆ</h2>
  <ul>
    <li id="FOOTER01"><a href="#PAGETOP">TOP</a></li>
    <li id="FOOTER02"><address><a href="mailto:mail@address.com">mail</a></address></li>
@@ -186,7 +98,7 @@
 </div>
 
 
-<!--PAGETOPƒuƒƒbƒN‚ð•Â‚¶‚Ü‚·«-->
+<!--PAGETOPãƒ–ãƒ­ãƒƒã‚¯ã‚’é–‰ã˜ã¾ã™â†“-->
 </div>
 
 </body>
